cmake_minimum_required(VERSION 3.12)

# Application source files (explicitly listed)
set(APP_SOURCES
    CubeGame/AssistDrawSystem.cpp
    CubeGame/Attachment.cpp
    CubeGame/BearPart.cpp
    CubeGame/BehaviorNode.cpp
    CubeGame/Block.cpp
    CubeGame/BlockPart.cpp
    CubeGame/BuildingSystem.cpp
    CubeGame/Bullet.cpp
    CubeGame/BulletMgr.cpp
    CubeGame/ButtonPart.cpp
    CubeGame/CannonPart.cpp
    CubeGame/ControlPart.cpp
    CubeGame/CropSystem.cpp
    CubeGame/CubePlayer.cpp
    CubeGame/CylinderPart.cpp
    CubeGame/GameConstraint.cpp
    CubeGame/GameItem.cpp
    CubeGame/GameItemInstance.cpp
    CubeGame/GameItemMgr.cpp
    CubeGame/GameNodeEditor.cpp
    CubeGame/GamePart.cpp
    CubeGame/GamePartRenderMgr.cpp
    CubeGame/GamePartRenderNode.cpp
    CubeGame/GameScriptBinding.cpp
    CubeGame/GameUISystem.cpp
    CubeGame/GameWorld.cpp
    CubeGame/GraphNode.cpp
    CubeGame/GraphNodeInfo.cpp
    CubeGame/Gun/FPGun.cpp
    CubeGame/Gun/FPGunData.cpp
    CubeGame/Gun/FPGunMgr.cpp
    CubeGame/Island.cpp
    CubeGame/LaserBullet.cpp
    CubeGame/LiftPart.cpp
    CubeGame/LoadingUI.cpp
    CubeGame/NodeEditorNodes/AssignNode.cpp
    CubeGame/NodeEditorNodes/BearingPartNode.cpp
    CubeGame/NodeEditorNodes/ButtonPartNode.cpp
    CubeGame/NodeEditorNodes/CannonPartNode.cpp
    CubeGame/NodeEditorNodes/ConstantIntNode.cpp
    CubeGame/NodeEditorNodes/ControlPartNode.cpp
    CubeGame/NodeEditorNodes/DebugBehaviorNode.cpp
    CubeGame/NodeEditorNodes/EqualNode.cpp
    CubeGame/NodeEditorNodes/IfNode.cpp
    CubeGame/NodeEditorNodes/KeyAnyTriggerNode.cpp
    CubeGame/NodeEditorNodes/KeyPairTriggerNode.cpp
    CubeGame/NodeEditorNodes/KeyTriggerNode.cpp
    CubeGame/NodeEditorNodes/PlanterPartNode.cpp
    CubeGame/NodeEditorNodes/PrintNode.cpp
    CubeGame/NodeEditorNodes/SpinNode.cpp
    CubeGame/NodeEditorNodes/SpringPartNode.cpp
    CubeGame/NodeEditorNodes/SwitchNode.cpp
    CubeGame/NodeEditorNodes/ThrusterPartNode.cpp
    CubeGame/NodeEditorNodes/ToggleNode.cpp
    CubeGame/NodeEditorNodes/UseNode.cpp
    CubeGame/NodeEditorNodes/VarNode.cpp
    CubeGame/NodeEditorNodes/VectorNode.cpp
    CubeGame/OptionPanel.cpp
    CubeGame/PaintGun.cpp
    CubeGame/PartSurface.cpp
    CubeGame/PartSurfaceMgr.cpp
    CubeGame/PlanterPart.cpp
    CubeGame/PreviewItem.cpp
    CubeGame/Projectile.cpp
    CubeGame/ProjectileBullet.cpp
    CubeGame/ResNode.cpp
    CubeGame/SpringPart.cpp
    CubeGame/SwitchPart.cpp
    CubeGame/ThrusterPart.cpp
    CubeGame/TriggerNode.cpp
    CubeGame/UI/HudUI.cpp
    CubeGame/UI/InventoryUI.cpp
    CubeGame/UI/KeyMapper.cpp
    CubeGame/UI/LoadWorldUI.cpp
    CubeGame/UI/NewWorldSettingUI.cpp
    CubeGame/UI/PainterUI.cpp
    CubeGame/UIHelper.cpp
    CubeGame/Vehicle.cpp
    CubeGame/VehicleBroswer.cpp
    GameEntry.cpp
    PTMGame/PTMAlchemyDepartment.cpp
    PTMGame/PTMArmy.cpp
    PTMGame/PTMArmyGUI.cpp
    PTMGame/PTMBuilding.cpp
    PTMGame/PTMConfig.cpp
    PTMGame/PTMDepartment.cpp
    PTMGame/PTMEventMgr.cpp
    PTMGame/PTMFarmingDepartment.cpp
    PTMGame/PTMGameTimeMgr.cpp
    PTMGame/PTMHero.cpp
    PTMGame/PTMHUD.cpp
    PTMGame/PTMInGameEvent.cpp
    PTMGame/PTMInspectorGUI.cpp
    PTMGame/PTMMapCamera.cpp
    PTMGame/PTMModifier.cpp
    PTMGame/PTMNation.cpp
    PTMGame/PTMNationController.cpp
    PTMGame/PTMPawn.cpp
    PTMGame/PTMPawnJudge.cpp
    PTMGame/PTMPerk.cpp
    PTMGame/PTMPlayerController.cpp
    PTMGame/PTMPop.cpp
    PTMGame/PTMTech.cpp
    PTMGame/PTMTile.cpp
    PTMGame/PTMTown.cpp
    PTMGame/PTMTownGUI.cpp
    PTMGame/PTMWorld.cpp
    RLGame/RLAIController.cpp
    RLGame/RLBullet.cpp
    RLGame/RLBulletPool.cpp
    RLGame/RLCollectible.cpp
    RLGame/RLController.cpp
    RLGame/RLDirector.cpp
    RLGame/RLEffectMgr.cpp
    RLGame/RLGUI.cpp
    RLGame/RLHero.cpp
    RLGame/RLHeroCollection.cpp
    RLGame/RLInteraction.cpp
    RLGame/RLPerk.cpp
    RLGame/RLPlayerController.cpp
    RLGame/RLPlayerState.cpp
    RLGame/RLSFX.cpp
    RLGame/RLShopMgr.cpp
    RLGame/RLSkills.cpp
    RLGame/RLSpritePool.cpp
    RLGame/RLUtility.cpp
    RLGame/RLWeapon.cpp
    RLGame/RLWeaponCollection.cpp
    RLGame/RLWorld.cpp
)

set(APP_HEADERS
    CubeGame/AssistDrawSystem.h
    CubeGame/Attachment.h
    CubeGame/BearPart.h
    CubeGame/BehaviorNode.h
    CubeGame/Block.h
    CubeGame/BlockInfo.h
    CubeGame/BlockInfoMgr.h
    CubeGame/BlockPart.h
    CubeGame/BuildingSystem.h
    CubeGame/Bullet.h
    CubeGame/BulletMgr.h
    CubeGame/ButtonPart.h
    CubeGame/CannonPart.h
    CubeGame/ControlPart.h
    CubeGame/CropSystem.h
    CubeGame/CubePlayer.h
    CubeGame/CylinderPart.h
    CubeGame/GameConstraint.h
    CubeGame/GameItem.h
    CubeGame/GameItemInstance.h
    CubeGame/GameItemMgr.h
    CubeGame/GameNodeEditor.h
    CubeGame/GamePart.h
    CubeGame/GamePartRenderMgr.h
    CubeGame/GamePartRenderNode.h
    CubeGame/GamePartType.h
    CubeGame/GameScriptBinding.h
    CubeGame/GameUISystem.h
    CubeGame/GameWorld.h
    CubeGame/GraphNode.h
    CubeGame/GraphNodeInfo.h
    CubeGame/Gun/FPGun.h
    CubeGame/Gun/FPGunData.h
    CubeGame/Gun/FPGunMgr.h
    CubeGame/Island.h
    CubeGame/LaserBullet.h
    CubeGame/LiftPart.h
    CubeGame/LoadingUI.h
    CubeGame/NodeEditorNodes/AssignNode.h
    CubeGame/NodeEditorNodes/BearingPartNode.h
    CubeGame/NodeEditorNodes/ButtonPartNode.h
    CubeGame/NodeEditorNodes/CannonPartNode.h
    CubeGame/NodeEditorNodes/ConstantIntNode.h
    CubeGame/NodeEditorNodes/ControlPartNode.h
    CubeGame/NodeEditorNodes/DebugBehaviorNode.h
    CubeGame/NodeEditorNodes/EqualNode.h
    CubeGame/NodeEditorNodes/IfNode.h
    CubeGame/NodeEditorNodes/KeyAnyTriggerNode.h
    CubeGame/NodeEditorNodes/KeyPairTriggerNode.h
    CubeGame/NodeEditorNodes/KeyTriggerNode.h
    CubeGame/NodeEditorNodes/PlanterPartNode.h
    CubeGame/NodeEditorNodes/PrintNode.h
    CubeGame/NodeEditorNodes/SpinNode.h
    CubeGame/NodeEditorNodes/SpringPartNode.h
    CubeGame/NodeEditorNodes/SwitchNode.h
    CubeGame/NodeEditorNodes/ThrusterPartNode.h
    CubeGame/NodeEditorNodes/ToggleNode.h
    CubeGame/NodeEditorNodes/UseNode.h
    CubeGame/NodeEditorNodes/VarNode.h
    CubeGame/NodeEditorNodes/VectorNode.h
    CubeGame/OptionPanel.h
    CubeGame/PaintGun.h
    CubeGame/PartSurface.h
    CubeGame/PartSurfaceMgr.h
    CubeGame/PlanterPart.h
    CubeGame/PreviewItem.h
    CubeGame/Projectile.h
    CubeGame/ProjectileBullet.h
    CubeGame/ResNode.h
    CubeGame/SpringPart.h
    CubeGame/SwitchPart.h
    CubeGame/ThrusterPart.h
    CubeGame/TriggerNode.h
    CubeGame/UI/HudUI.h
    CubeGame/UI/InventoryUI.h
    CubeGame/UI/KeyMapper.h
    CubeGame/UI/LoadWorldUI.h
    CubeGame/UI/NewWorldSettingUI.h
    CubeGame/UI/PainterUI.h
    CubeGame/UIHelper.h
    CubeGame/Vehicle.h
    CubeGame/VehicleBroswer.h
    GameEntry.h
    PTMGame/PTMAlchemyDepartment.h
    PTMGame/PTMArmy.h
    PTMGame/PTMArmyGUI.h
    PTMGame/PTMBaseDef.h
    PTMGame/PTMBuilding.h
    PTMGame/PTMConfig.h
    PTMGame/PTMCurrencyEnum.h
    PTMGame/PTMDepartment.h
    PTMGame/PTMEventMgr.h
    PTMGame/PTMFarmingDepartment.h
    PTMGame/PTMGameTimeMgr.h
    PTMGame/PTMHero.h
    PTMGame/PTMHUD.h
    PTMGame/PTMILogicTickable.h
    PTMGame/PTMInGameEvent.h
    PTMGame/PTMInspectorGUI.h
    PTMGame/PTMMapCamera.h
    PTMGame/PTMModifier.h
    PTMGame/PTMNation.h
    PTMGame/PTMNationController.h
    PTMGame/PTMObjectReflect.h
    PTMGame/PTMPawn.h
    PTMGame/PTMPawnJudge.h
    PTMGame/PTMPerk.h
    PTMGame/PTMPlayerController.h
    PTMGame/PTMPop.h
    PTMGame/PTMTaxPack.h
    PTMGame/PTMTech.h
    PTMGame/PTMTile.h
    PTMGame/PTMTown.h
    PTMGame/PTMTownGUI.h
    PTMGame/PTMWorld.h
    RLGame/RLAIController.h
    RLGame/RLBullet.h
    RLGame/RLBulletPool.h
    RLGame/RLCollectible.h
    RLGame/RLController.h
    RLGame/RLDef.h
    RLGame/RLDirector.h
    RLGame/RLEffectMgr.h
    RLGame/RLGUI.h
    RLGame/RLHero.h
    RLGame/RLHeroCollection.h
    RLGame/RLInteraction.h
    RLGame/RLPerk.h
    RLGame/RLPlayerController.h
    RLGame/RLPlayerState.h
    RLGame/RLSFX.h
    RLGame/RLShopMgr.h
    RLGame/RLSkills.h
    RLGame/RLSpritePool.h
    RLGame/RLUtility.h
    RLGame/RLWeapon.h
    RLGame/RLWeaponCollection.h
    RLGame/RLWorld.h
)

add_library(CubeGame STATIC
    ${APP_SOURCES}
    ${APP_HEADERS}
)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${APP_SOURCES} ${APP_HEADERS})

target_compile_features(CubeGame PUBLIC cxx_std_17)

# Application code includes headers relative to CubeEngine/ and Application/
target_include_directories(CubeGame
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/..
        ${CMAKE_CURRENT_SOURCE_DIR}
)

# Application depends on the engine
target_link_libraries(CubeGame PUBLIC CubeEngine)

if(MSVC)
    target_compile_options(CubeGame PRIVATE /utf-8)
endif()
