cmake_minimum_required(VERSION 3.12)

# Engine source files (explicitly listed)
set(ENGINE_SOURCES
    2D/AABB2D.cpp
    2D/BoxContainer.cpp
    2D/Button.cpp
    2D/Collider2D.cpp
    2D/GUIAttributeLabel.cpp
    2D/GUIFileBrowser.cpp
    2D/GUIFrame.cpp
    2D/GUIListView.cpp
    2D/GUIListViewItem.cpp
    2D/GUIRadioFrame.cpp
    2D/GUIStyle.cpp
    2D/GUIStyleMgr.cpp
    2D/GUISystem.cpp
    2D/GUITitledFrame.cpp
    2D/GUIWindowMgr.cpp
    2D/imgui.cpp
    2D/imgui_demo.cpp
    2D/imgui_draw.cpp
    2D/imgui_widgets.cpp
    2D/imnodes.cpp
    2D/InspectableUI.cpp
    2D/LabelNew.cpp
    2D/NodeEditor.cpp
    2D/QuadTree2D.cpp
    2D/Sprite.cpp
    2D/SpriteInstanceMgr.cpp
    2D/TableView.cpp
    2D/TileMap2DMgr.cpp
    3D/Effect/Effect.cpp
    3D/Effect/EffectMgr.cpp
    3D/Model/Model.cpp
    3D/Model/ModelLoader.cpp
    3D/Particle/Particle.cpp
    3D/Particle/ParticleEmitter.cpp
    3D/Particle/ParticleEmitterModule.cpp
    3D/Particle/ParticleInitAlphaModule.cpp
    3D/Particle/ParticleInitLifeSpanModule.cpp
    3D/Particle/ParticleInitPosModule.cpp
    3D/Particle/ParticleInitSizeModule.cpp
    3D/Particle/ParticleInitVelocityModule.cpp
    3D/Particle/ParticleSystem.cpp
    3D/Particle/ParticleUpdateAlphaModule.cpp
    3D/Particle/ParticleUpdateColorModule.cpp
    3D/Particle/ParticleUpdateSizeModule.cpp
    3D/Primitive/CubePrimitive.cpp
    3D/Primitive/CylinderPrimitive.cpp
    3D/Primitive/LaserPrimitive.cpp
    3D/Primitive/LineGrid.cpp
    3D/Primitive/LinePrimitive.cpp
    3D/Primitive/RightPrismPrimitive.cpp
    3D/Primitive/SpherePrimitive.cpp
    3D/Primitive/volumeMesh.cpp
    3D/ShadowMap/ShadowMap.cpp
    3D/ShadowMap/ShadowMapFBO.cpp
    3D/Sky.cpp
    3D/SkyBox.cpp
    3D/Terrain/GameMap.cpp
    3D/Terrain/GameMapConfig.cpp
    3D/Terrain/MarchingCubes.cpp
    3D/Terrain/SurfaceNets.cpp
    3D/Terrain/TerrainDrawableNode.cpp
    3D/Terrain/TerrainDrawableSet.cpp
    3D/Terrain/TerrainEditSystem.cpp
    3D/Terrain/TerrainLodSelector.cpp
    3D/Terrain/TerrainMeshCache.cpp
    3D/Terrain/TerrainMesher.cpp
    3D/Terrain/TerrainMeshRequest.cpp
    3D/Terrain/TerrainNeighborResolver.cpp
    3D/Terrain/TerrainOctree.cpp
    3D/Terrain/TerrainOctreeNode.cpp
    3D/Terrain/TerrainOctreeTypes.cpp
    3D/Terrain/TerrainRenderSet.cpp
    3D/Terrain/TerrainRuntime.cpp
    3D/Terrain/TerrainSampler.cpp
    3D/Thumbnail.cpp
    3D/Vegetation/FoliageSystem.cpp
    3D/Vegetation/Grass.cpp
    Action/Action.cpp
    Action/ActionCalFunc.cpp
    Action/ActionInterval.cpp
    Action/ActionMgr.cpp
    Action/ActionRemoveMySelf.cpp
    Action/ActionSequence.cpp
    Action/MoveBy.cpp
    Action/MoveTo.cpp
    Action/RepeatForever.cpp
    Action/RotateBy.cpp
    Action/RotateTo.cpp
    Action/TintTo.cpp
    AudioSystem/Audio.cpp
    AudioSystem/AudioEvent.cpp
    AudioSystem/AudioSystem.cpp
    BackEnd/AbstractDevice.cpp
    BackEnd/DeviceBuffer.cpp
    BackEnd/DeviceDescriptor.cpp
    BackEnd/DeviceFrameBuffer.cpp
    BackEnd/DeviceMaterial.cpp
    BackEnd/DevicePipeline.cpp
    BackEnd/DeviceRenderCommand.cpp
    BackEnd/DeviceRenderItem.cpp
    BackEnd/DeviceRenderPass.cpp
    BackEnd/DeviceRenderStage.cpp
    BackEnd/DeviceShader.cpp
    BackEnd/DeviceShaderCollection.cpp
    BackEnd/DeviceTexture.cpp
    BackEnd/FontEngine.cpp
    BackEnd/gl/DeviceBufferGL.cpp
    BackEnd/gl/DeviceShaderGL.cpp
    BackEnd/gl/DeviceTextureGL.cpp
    BackEnd/GLFW/GLFW_BackEnd.cpp
    BackEnd/RenderBackEnd.cpp
    BackEnd/RenderBackEndBase.cpp
    BackEnd/vk/DeviceBufferVK.cpp
    BackEnd/vk/DeviceDescriptorSetLayoutVK.cpp
    BackEnd/vk/DeviceDescriptorVK.cpp
    BackEnd/vk/DeviceFrameBufferVK.cpp
    BackEnd/vk/DeviceItemBufferPoolVK.cpp
    BackEnd/vk/DeviceMaterialVK.cpp
    BackEnd/vk/DeviceMemoryPoolVK.cpp
    BackEnd/vk/DevicePipelineVK.cpp
    BackEnd/vk/DeviceRenderCommandVK.cpp
    BackEnd/vk/DeviceRenderPassVK.cpp
    BackEnd/vk/DeviceRenderStageVK.cpp
    BackEnd/vk/DeviceShaderCollectionVK.cpp
    BackEnd/vk/DeviceShaderVK.cpp
    BackEnd/vk/DeviceTextureVK.cpp
    BackEnd/VkRenderBackEnd.cpp
    BackEnd/WindowBackEnd.cpp
    BackEnd/WindowBackEndMgr.cpp
    Base/BlackBoard.cpp
    Base/Camera.cpp
    Base/GuidMgr.cpp
    Base/GuidObj.cpp
    Base/Node.cpp
    Base/TAssert.cpp
    Base/Timer.cpp
    Base/TimerMgr.cpp
    Base/TranslationMgr.cpp
    Base/uuid4.cpp
    Collision/ColliderEllipsoid.cpp
    Collision/CollisionUtility.cpp
    Collision/Physics6DOFConstraint.cpp
    Collision/Physics6DOFSprintConstraint.cpp
    Collision/PhysicsCompoundShape.cpp
    Collision/PhysicsConstraint.cpp
    Collision/PhysicsHingeConstraint.cpp
    Collision/PhysicsListener.cpp
    Collision/PhysicsMgr.cpp
    Collision/PhysicsRigidBody.cpp
    Collision/PhysicsShape.cpp
    Engine/AppEntry.cpp
    Engine/DebugSystem.cpp
    Engine/Engine.cpp
    Engine/EngineDef.cpp
    Engine/WorkerThreadSystem.cpp
    Event/Event.cpp
    Event/EventMgr.cpp
    Font/Font.cpp
    Font/FontMgr.cpp
    Font/GlyphAtlas.cpp
    Font/GlyphData.cpp
    Game/ConsolePanel.cpp
    Game/DebugInfoPanel.cpp
    Game/FPSCamera.cpp
    Game/GameCamera.cpp
    Game/OrbitCamera.cpp
    Game/WorldSystem.cpp
    Interface/DepthPolicy.cpp
    Interface/Drawable.cpp
    Interface/Drawable2D.cpp
    Interface/Drawable3D.cpp
    Lighting/AmbientLight.cpp
    Lighting/BaseLight.cpp
    Lighting/DirectionalLight.cpp
    Lighting/PointLight.cpp
    Lighting/SpotLight.cpp
    Log/LogSystem.cpp
    Math/AABB.cpp
    Math/Frustum.cpp
    Math/ivec2.cpp
    Math/Matrix44.cpp
    Math/Quaternion.cpp
    Math/Ray.cpp
    Math/Rect.cpp
    Math/t_Plane.cpp
    Math/t_Sphere.cpp
    Math/vec2.cpp
    Math/vec3.cpp
    Math/vec4.cpp
    Mesh/InstancedMesh.cpp
    Mesh/Mesh.cpp
    Mesh/VertexData.cpp
    Rendering/Bloom.cpp
    Rendering/FrameBuffer.cpp
    Rendering/GraphicsRenderer.cpp
    Rendering/ImageFormat.cpp
    Rendering/InstancingMgr.cpp
    Rendering/RenderBuffer.cpp
    Rendering/RenderCommand.cpp
    Rendering/RenderPath.cpp
    Rendering/RenderQueues.cpp
    Rendering/RenderStage.cpp
    Rendering/SSGI.cpp
    Rendering/TSAA.cpp
    Scene/OctreeScene.cpp
    Scene/Scene.cpp
    Scene/SceneCuller.cpp
    Scene/SceneMgr.cpp
    ScriptPy/ScriptBinding.cpp
    ScriptPy/ScriptPyMgr.cpp
    ScriptPy/ScriptUI.cpp
    Shader/ShaderMgr.cpp
    Shader/ShaderProgram.cpp
    Technique/Material.cpp
    Technique/MaterialPool.cpp
    Technique/ShadingParams.cpp
    Technique/TechniqueVar.cpp
    Texture/Texture.cpp
    Texture/TextureAtlas.cpp
    Texture/TextureFrame.cpp
    Texture/TextureMgr.cpp
    Tina/TinaCompiler.cpp
    Tina/TinaParser.cpp
    Tina/TinaRunTime.cpp
    Tina/TinaTokenizer.cpp
    Tina/TinaValue.cpp
    Utility/file/Data.cpp
    Utility/file/JsonUtility.cpp
    Utility/file/Tfile.cpp
    Utility/log/Log.cpp
    Utility/log/TstatckTrace.cpp
    Utility/math/TbaseMath.cpp
    Utility/math/Tvector.cpp
    Utility/misc/tmisc.cpp
    Utility/string/Tstring.cpp
)

set(ENGINE_HEADERS
    2D/AABB2D.h
    2D/BoxContainer.h
    2D/Button.h
    2D/Collider2D.h
    2D/GUIAttributeLabel.h
    2D/GUIFileBrowser.h
    2D/GUIFrame.h
    2D/GUIListView.h
    2D/GUIListViewItem.h
    2D/GUIRadioFrame.h
    2D/GUIStyle.h
    2D/GUIStyleMgr.h
    2D/GUISystem.h
    2D/GUITitledFrame.h
    2D/GUIWindowMgr.h
    2D/imconfig.h
    2D/imgui.h
    2D/imgui_internal.h
    2D/imgui_markdown.h
    2D/imnodes.h
    2D/imstb_rectpack.h
    2D/imstb_textedit.h
    2D/imstb_truetype.h
    2D/InspectableUI.h
    2D/LabelNew.h
    2D/NodeEditor.h
    2D/QuadTree2D.h
    2D/Sprite.h
    2D/SpriteInstanceMgr.h
    2D/stb_rect_pack.h
    2D/stb_textedit.h
    2D/stb_truetype.h
    2D/TableView.h
    2D/TileMap2DMgr.h
    3D/Effect/Effect.h
    3D/Effect/EffectMgr.h
    3D/Model/Model.h
    3D/Model/ModelLoader.h
    3D/Particle/Particle.h
    3D/Particle/ParticleEmitter.h
    3D/Particle/ParticleEmitterModule.h
    3D/Particle/ParticleInitAlphaModule.h
    3D/Particle/ParticleInitLifeSpanModule.h
    3D/Particle/ParticleInitPosModule.h
    3D/Particle/ParticleInitSizeModule.h
    3D/Particle/ParticleInitVelocityModule.h
    3D/Particle/ParticleSystem.h
    3D/Particle/ParticleUpdateAlphaModule.h
    3D/Particle/ParticleUpdateColorModule.h
    3D/Particle/ParticleUpdateSizeModule.h
    3D/Primitive/CubePrimitive.h
    3D/Primitive/CylinderPrimitive.h
    3D/Primitive/LaserPrimitive.h
    3D/Primitive/LineGrid.h
    3D/Primitive/LinePrimitive.h
    3D/Primitive/RightPrismPrimitive.h
    3D/Primitive/SpherePrimitive.h
    3D/Primitive/volumeMesh.h
    3D/ShadowMap/ShadowMap.h
    3D/ShadowMap/ShadowMapFBO.h
    3D/Sky.h
    3D/SkyBox.h
    3D/Terrain/GameMap.h
    3D/Terrain/GameMapConfig.h
    3D/Terrain/MarchingCubes.h
    3D/Terrain/MarchingCubesNew.h
    3D/Terrain/MCTable.h
    3D/Terrain/SurfaceNets.h
    3D/Terrain/TerrainDrawableNode.h
    3D/Terrain/TerrainDrawableSet.h
    3D/Terrain/TerrainEditSystem.h
    3D/Terrain/TerrainLodSelector.h
    3D/Terrain/TerrainMeshCache.h
    3D/Terrain/TerrainMesher.h
    3D/Terrain/TerrainMeshRequest.h
    3D/Terrain/TerrainNeighborResolver.h
    3D/Terrain/TerrainOctree.h
    3D/Terrain/TerrainOctreeNode.h
    3D/Terrain/TerrainOctreeTypes.h
    3D/Terrain/TerrainRenderSet.h
    3D/Terrain/TerrainRuntime.h
    3D/Terrain/TerrainSampler.h
    3D/Thumbnail.h
    3D/Vegetation/FoliageSystem.h
    3D/Vegetation/Grass.h
    Action/Action.h
    Action/ActionCalFunc.h
    Action/ActionInterval.h
    Action/ActionMgr.h
    Action/ActionRemoveMySelf.h
    Action/ActionSequence.h
    Action/MoveBy.h
    Action/MoveTo.h
    Action/RepeatForever.h
    Action/RotateBy.h
    Action/RotateTo.h
    Action/TintTo.h
    AudioSystem/Audio.h
    AudioSystem/AudioEvent.h
    AudioSystem/AudioSystem.h
    BackEnd/AbstractDevice.h
    BackEnd/DeviceBuffer.h
    BackEnd/DeviceDescriptor.h
    BackEnd/DeviceFrameBuffer.h
    BackEnd/DeviceMaterial.h
    BackEnd/DevicePipeline.h
    BackEnd/DeviceRenderCommand.h
    BackEnd/DeviceRenderItem.h
    BackEnd/DeviceRenderPass.h
    BackEnd/DeviceRenderStage.h
    BackEnd/DeviceShader.h
    BackEnd/DeviceShaderCollection.h
    BackEnd/DeviceTexture.h
    BackEnd/FontEngine.h
    BackEnd/gl/DeviceBufferGL.h
    BackEnd/gl/DeviceShaderGL.h
    BackEnd/gl/DeviceTextureGL.h
    BackEnd/GLFW/GLFW_BackEnd.h
    BackEnd/RenderBackEnd.h
    BackEnd/RenderBackEndBase.h
    BackEnd/vk/DeviceBufferVK.h
    BackEnd/vk/DeviceDescriptorSetLayoutVK.h
    BackEnd/vk/DeviceDescriptorVK.h
    BackEnd/vk/DeviceFrameBufferVK.h
    BackEnd/vk/DeviceItemBufferPoolVK.h
    BackEnd/vk/DeviceMaterialVK.h
    BackEnd/vk/DeviceMemoryPoolVK.h
    BackEnd/vk/DevicePipelineVK.h
    BackEnd/vk/DeviceRenderCommandVK.h
    BackEnd/vk/DeviceRenderPassVK.h
    BackEnd/vk/DeviceRenderStageVK.h
    BackEnd/vk/DeviceShaderCollectionVK.h
    BackEnd/vk/DeviceShaderVK.h
    BackEnd/vk/DeviceTextureVK.h
    BackEnd/VkRenderBackEnd.h
    BackEnd/WindowBackEnd.h
    BackEnd/WindowBackEndMgr.h
    Base/BlackBoard.h
    Base/Camera.h
    Base/GuidMgr.h
    Base/GuidObj.h
    Base/Node.h
    Base/Singleton.h
    Base/TAssert.h
    Base/Timer.h
    Base/TimerMgr.h
    Base/TranslationMgr.h
    Base/TypeTraits.h
    Base/uuid4.h
    Collision/ColliderEllipsoid.h
    Collision/CollisionUtility.h
    Collision/Physics6DOFConstraint.h
    Collision/Physics6DOFSprintConstraint.h
    Collision/PhysicsCompoundShape.h
    Collision/PhysicsConstraint.h
    Collision/PhysicsHingeConstraint.h
    Collision/PhysicsListener.h
    Collision/PhysicsMgr.h
    Collision/PhysicsRigidBody.h
    Collision/PhysicsShape.h
    Collision/PhysicsSystem.h
    CubeEngine.h
    doc/mainpage.h
    doc/res_page.h
    doc/use_scripte.h
    Engine/AppEntry.h
    Engine/DebugSystem.h
    Engine/Engine.h
    Engine/EngineDef.h
    Engine/WorkerThreadSystem.h
    Event/Event.h
    Event/EventMgr.h
    Font/Font.h
    Font/FontMgr.h
    Font/GlyphAtlas.h
    Font/GlyphData.h
    Game/ConsolePanel.h
    Game/CubePlaceHolder.h
    Game/DebugInfoPanel.h
    Game/FPSCamera.h
    Game/GameCamera.h
    Game/OrbitCamera.h
    Game/WorldSystem.h
    Interface/DepthPolicy.h
    Interface/Drawable.h
    Interface/Drawable2D.h
    Interface/Drawable3D.h
    Lighting/AmbientLight.h
    Lighting/BaseLight.h
    Lighting/DirectionalLight.h
    Lighting/PointLight.h
    Lighting/SpotLight.h
    Log/LogSystem.h
    Math/AABB.h
    Math/Frustum.h
    Math/ivec2.h
    Math/Matrix44.h
    Math/Plane.h
    Math/Quaternion.h
    Math/Ray.h
    Math/Rect.h
    Math/t_Sphere.h
    Math/vec2.h
    Math/vec3.h
    Math/vec4.h
    Mesh/InstanceData.h
    Mesh/InstancedMesh.h
    Mesh/Mesh.h
    Mesh/VertexData.h
    Rendering/Bloom.h
    Rendering/FrameBuffer.h
    Rendering/GraphicsRenderer.h
    Rendering/ImageFormat.h
    Rendering/InstancingMgr.h
    Rendering/RenderBuffer.h
    Rendering/RenderCommand.h
    Rendering/RenderFlag.h
    Rendering/RenderPath.h
    Rendering/RenderQueues.h
    Rendering/RenderStage.h
    Rendering/SSGI.h
    Rendering/TSAA.h
    Scene/OctreeScene.h
    Scene/Scene.h
    Scene/SceneCuller.h
    Scene/SceneMgr.h
    ScriptPy/ScriptBinding.h
    ScriptPy/ScriptBindMacro.h
    ScriptPy/ScriptPyMgr.h
    ScriptPy/ScriptUI.h
    Shader/ShaderMgr.h
    Shader/ShaderProgram.h
    Technique/Material.h
    Technique/MaterialPool.h
    Technique/ShadingParams.h
    Technique/TechniqueVar.h
    Texture/Texture.h
    Texture/TextureAtlas.h
    Texture/TextureFrame.h
    Texture/TextureMgr.h
    Tina/TinaCompiler.h
    Tina/TinaParser.h
    Tina/TinaRunTime.h
    Tina/TinaTokenizer.h
    Tina/TinaValue.h
    Utility/file/Data.h
    Utility/file/JsonUtility.h
    Utility/file/Tfile.h
    Utility/log/Log.h
    Utility/log/TstatckTrace.h
    Utility/math/TbaseMath.h
    Utility/math/Tvector.h
    Utility/misc/Tmisc.h
    Utility/string/Tstring.h
)

add_library(CubeEngineEngine STATIC
    ${ENGINE_SOURCES}
    ${ENGINE_HEADERS}
)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${ENGINE_SOURCES} ${ENGINE_HEADERS})

target_compile_features(CubeEngineEngine PUBLIC cxx_std_17)

# Public because engine headers are included as "EngineSrc/..." / "Engine/..."
# from both inside the engine and from Application/main.cpp.
# Application/ remains exposed for older non-terrain EngineSrc files that still
# include CubeGame headers.
target_include_directories(CubeEngineEngine
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/..
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}/../Application
)

# External headers used by engine implementation and engine headers
target_include_directories(CubeEngineEngine
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/../../external
        ${CMAKE_CURRENT_SOURCE_DIR}/../../external/FreeType
        ${CMAKE_CURRENT_SOURCE_DIR}/../../external/GLFW3/include
        ${CMAKE_CURRENT_SOURCE_DIR}/../../external/GLEW
        ${CMAKE_CURRENT_SOURCE_DIR}/../../external/vulkan
        ${CMAKE_CURRENT_SOURCE_DIR}/../../external/spirv_cross
        ${CMAKE_CURRENT_SOURCE_DIR}/../../external/glslang
        ${CMAKE_CURRENT_SOURCE_DIR}/../../external/gli
        ${CMAKE_CURRENT_SOURCE_DIR}/../../external/rapidjson/include
        ${CMAKE_CURRENT_SOURCE_DIR}/../../external/Python/include
        ${CMAKE_CURRENT_SOURCE_DIR}/../../external/Soloud
        ${CMAKE_CURRENT_SOURCE_DIR}/../../external/box2d
        ${CMAKE_CURRENT_SOURCE_DIR}/../../external/Bullet
)

target_compile_definitions(CubeEngineEngine
    PUBLIC
        B3_USE_CLEW
        WITH_OPENCV2
)

# Engine implementation depends on external symbols (SOIL2, Lua, Bullet, etc.)
target_link_libraries(CubeEngineEngine PUBLIC CubeEngineExternal)

if(MSVC)
    target_compile_options(CubeEngineEngine PRIVATE /arch:AVX /utf-8)
endif()
